[package]
name = "hatchet-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc-async = "3"
derive_builder = "0.20"
envy = "0.4"
futures-util = "0.3"
jsonwebtoken = "9"
prost = "0.13"
prost-types = "0.13"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tonic = { version = "0.12", features = ["tls"] }

[build-dependencies]
tonic-build = "0.12"
tempfile = "3"
