[package]
name = "hatchet-sdk"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
anyhow = "1"
ctrlc2 = { version = "3", features = ["termination", "tokio"] }
derive_builder = "0.20"
envy = "0.4"
futures-util = "0.3"
http = "1"
jsonwebtoken = "9"
prost = "0.13"
prost-types = "0.13"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
tracing = "0.1"

[build-dependencies]
tonic-build = "0.12"
tempfile = "3"

[dev-dependencies]
dotenv = "0.15"
rstest = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
